Fix spacing around the cards

--- a/app/assets/stylesheets/expenses.css
+++ b/app/assets/stylesheets/expenses.css
@@ -8,9 +8,10 @@
   padding: 15px;
   text-decoration: none;
   background-color: #fdfdfd;
-  width: 90%;
+  width: 80%;
   height: 100px;
   margin-bottom: 15px;
+  border-radius: 5px;
 }
 
 #expenses {
