--- a/app/assets/stylesheets/groups.css
+++ b/app/assets/stylesheets/groups.css
@@ -12,13 +12,14 @@
 }
 
 #groups > a {
+  border-radius: 5px;
   box-shadow: 0px 0px 13px -3px rgba(0, 0, 0, 1);
   -webkit-box-shadow: 0px 0px 13px -3px rgba(0, 0, 0, 1);
   -moz-box-shadow: 0px 0px 13px -3px rgba(0, 0, 0, 1);
   padding: 15px;
   text-decoration: none;
   background-color: #fdfdfd;
-  width: 90%;
+  width: 80%;
   height: 100px;
   margin-bottom: 15px;
 }
